feat: implement the system and user prompt with template and templete render