@@ -51,3 +51,12 @@ dependencyManagement {
         mavenBom "org.springframework.ai:spring-ai-bom:1.0.1"
     }
 }
+
+tasks.named('test') {
+    useJUnitPlatform()
+    // hiding warnings
+    jvmArgs += [
+            "-XX:+EnableDynamicAgentLoading",
+            "-Xshare:off"
+    ]
+}
